--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="product_quantity">Product quantity</string>
     <string name="product_price">Product price</string>
     <string name="product_desc">Product description</string>
+    <string name="select_category">Select Category</string>
+    <string name="gallery">Gallery</string>
 </resources>
