--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,8 @@
     <string name="product_desc">Product description</string>
     <string name="select_category">Select Category</string>
     <string name="gallery">Gallery</string>
+    <string name="add_image">Add image</string>
+    <string name="brand_desc">Brand description</string>
+    <string name="add_brand">Add brand</string>
+    <string name="brand_name">Brand name</string>
 </resources>
