--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="brand_desc">Brand description</string>
     <string name="add_brand">Add brand</string>
     <string name="brand_name">Brand name</string>
+    <string name="add_category">Add Category</string>
 </resources>
