--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="brand_name">Brand name</string>
     <string name="add_category">Add Category</string>
     <string name="add_to_cart">Add to cart</string>
+    <string name="select_store">SELECT STORE</string>
 </resources>
