--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="add_to_cart">Add to cart</string>
     <string name="select_store">SELECT STORE</string>
     <string name="apply">Apply</string>
+    <string name="my_order">My Order</string>
 </resources>
