--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,14 +23,14 @@
     <string name="total_price">Total Price</string>
     <string name="category_name">Category name</string>
     <string name="category_desc">Category description</string>
-    <string name="product_name">Product name</string>
-    <string name="add_product">Add Product</string>
-    <string name="product_quantity">Product quantity</string>
-    <string name="product_price">Product price</string>
-    <string name="product_desc">Product description</string>
-    <string name="select_category">Select Category</string>
+    <string name="product_name">Tên sản phẩm</string>
+    <string name="add_product">Thêm sản phẩm</string>
+    <string name="product_quantity">Số lượng</string>
+    <string name="product_price">Giá tiền</string>
+    <string name="product_desc">Mô tả chi tiết sản phẩm</string>
+    <string name="select_category">Danh mục</string>
     <string name="gallery">Gallery</string>
-    <string name="add_image">Add image</string>
+    <string name="add_image">Thêm hình ảnh</string>
     <string name="brand_desc">Brand description</string>
     <string name="add_brand">Add brand</string>
     <string name="brand_name">Brand name</string>
