--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="brand_name">Brand name</string>
     <string name="add_category">Add Category</string>
     <string name="add_to_cart">Add to cart</string>
-    <string name="select_store">SELECT STORE</string>
+    <string name="select_store">SHOE SHOP</string>
     <string name="apply">Apply</string>
     <string name="my_order">My Order</string>
     <string name="brand_admin">Brand</string>
